Refactor LegoPartCatalog