@@ -1,5 +1,6 @@
 package eu.luminis.workshop.smallsteps.persistence;
 
+import eu.luminis.workshop.smallsteps.logic.domainmodel.LegoParts;
 import eu.luminis.workshop.smallsteps.logic.domainmodel.valueobjects.LegoSetNumber;
 import eu.luminis.workshop.smallsteps.logic.domainservice.catalog.LegoPartCatalog;
 import org.springframework.stereotype.Service;
@@ -9,18 +10,18 @@ import java.util.Map;
 
 @Service
 public class InMemoryLegoPartCatalog implements LegoPartCatalog {
-    private final Map<LegoSetNumber, Map<String, Integer>> partsForLegoSets;
+    private final Map<LegoSetNumber, LegoParts> partsForLegoSets;
 
     public InMemoryLegoPartCatalog() {
         this(null);
     }
 
-    public InMemoryLegoPartCatalog(Map<LegoSetNumber, Map<String, Integer>> partsForLegoSets) {
+    public InMemoryLegoPartCatalog(Map<LegoSetNumber, LegoParts> partsForLegoSets) {
         this.partsForLegoSets = partsForLegoSets;
     }
 
     @Override
-    public Map<String, Integer> allPartsForLegoSet(LegoSetNumber legoSetNumber) {
-        return partsForLegoSets.getOrDefault(legoSetNumber, Collections.emptyMap());
+    public LegoParts allPartsForLegoSet(LegoSetNumber legoSetNumber) {
+        return partsForLegoSets.getOrDefault(legoSetNumber, new LegoParts(Map.of()));
     }
 }
